Fixed build animation height being too long on mobile

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -1536,7 +1536,7 @@ footer .social-icons .social-link:hover {
 }
 .build-anim {
     position: relative;
-    height: 100%;
+    height: auto;
     width: auto;
     margin: 0 0 auto;
 }
